--- a/TPGESOC/pom.xml
+++ b/TPGESOC/pom.xml
@@ -63,6 +63,26 @@
             <artifactId>converter-gson</artifactId>
             <version>2.5.0</version>
         </dependency>
+        <dependency>
+            <groupId> org.uqbar-project </groupId>
+            <artifactId> jpa-java8-extras </artifactId>
+            <version> 1.0-alpha-1 </version>
+        </dependency>
+        <dependency>
+            <groupId> mysql </groupId>
+            <artifactId> mysql-connector-java </artifactId>
+            <version> 5.1.26 </version>
+        </dependency>
+        <dependency>
+            <groupId> org.hsqldb </groupId>
+            <artifactId> hsqldb </artifactId>
+            <version> 2.2.8 </version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
     </dependencies>
 
 
