--- a/TPGESOC/pom.xml
+++ b/TPGESOC/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>spark-template-handlebars</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver</artifactId>
+            <version>3.4.3</version>
+        </dependency>
     </dependencies>
 
 
